--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,148 @@
-.App {
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background: black;
+  min-height: 60vh;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1,
+h2,
+h4,
+p,
+li {
+  color: whitesmoke;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.taskdashboard {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-top: 8vh;
+}
+
+.taskdashboard input {
+  padding: 2vh 15px; /* Adjusted padding */
+  text-align: center;
+  border-radius: 3vh;
+  background-color: transparent;
+  border: 2px solid whitesmoke;
+  color: whitesmoke;
+  margin-right: 2vh;
+  border-width: 1px;
+}
+
+.taskdashboard button {
+  font-size: 3vh;
+  background-color: transparent;
+  color: whitesmoke;
+  border: 2px solid #04aa6d;
+  transition-duration: 0.4s;
+  padding: 1.5vh;
+  border-radius: 3vh;
+  border-width: 1px;
+}
+
+.taskdashboard button:hover {
+  background-color: #04aa6d;
   color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.tasks {
+  position: relative;
+  top: 6vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+h4 {
+  margin-top: 2vh;
+}
+
+li {
+  position: relative;
+  margin: 5vh;
+  text-align: left;
+  background-color: transparent;
+  padding: 0px;
+  border: 2px solid whitesmoke; /* Changed border property */
+  border-radius: 5px; /* Changed border-radius property */
+  list-style: none;
+  border-width: 1px;
+}
+
+.tasks-list {
+  position: relative;
+  top: 10px;
+  left: 10px;
+}
+
+.icons-list {
+  position: relative;
+  bottom: 10px;
+  left: 130px;
+}
+
+hr {
+  width: 85%;
+}
+
+.icons {
+  position: relative;
+  left: 70vh; /* Adjusted left property */
+}
+
+.icons i {
+  margin: 4px;
+  font-size: large;
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+.icons i:hover {
+  transform: scale(1.2);
+}
+
+.icon-delete:hover {
+  color: red;
+}
+
+#todo-header {
+  margin-top: 4vh;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
   }
-  to {
-    transform: rotate(360deg);
+
+  .icons-list i {
+    position: relative;
+    right: 55vh;
+  }
+
+  .tasks-list {
+    position: relative;
+    top: 14px;
+    left: 10px;
+  }
+
+  .taskdashboard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4vh;
+  }
+
+  p {
+    font-size: small;
   }
 }
